Part 1 of course lab workbook complete

--- a/coding_exercises.ipynb
+++ b/coding_exercises.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "19a61e6d",
    "metadata": {},
    "outputs": [
@@ -37,6 +37,36 @@
    ],
    "source": [
     "print(\"Hello, World!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fb41dbc",
+   "metadata": {},
+   "source": [
+    "# Printing\n",
+    "Prompt entered into Microsoft Copilot:\n",
+    "> Could you suggest a python code for ‘Hello, world!’ to demonstrate the concept of printing to a complete beginner in programming? Please explain the code step-by-step highlighting any key aspects.\n",
+    "\n",
+    "Key learning outcomes from this were to understand the breakdown of the python statement \"print(Hello, World!)\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "32350e92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello, world!\")"
    ]
   }
  ],
