File Update Check

--- a/coding_exercises.ipynb
+++ b/coding_exercises.ipynb
@@ -8,7 +8,7 @@
     "# AI for the Arts and Humanities (A) - Initial Jupyter Notebook\n",
     "This notebook is for the first section of the AI-A Course Lab Book.\n",
     "\n",
-    "- Become more proficient in writing code\n",
+    "- Become more proficient in programming with notebooks, as I'm mostly used to programming without them.\n",
     "- Complete the course"
    ]
   },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "19a61e6d",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "32350e92",
    "metadata": {},
    "outputs": [
