Completed python core concepts section

--- a/coding_exercises.ipynb
+++ b/coding_exercises.ipynb
@@ -68,6 +68,618 @@
    "source": [
     "print(\"Hello, world!\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be29c01f",
+   "metadata": {},
+   "source": [
+    "# Key Python Concepts\n",
+    "Below are concepts which make up the fundamental building blocks of the python programming language, using the string \"Hello, world!\" as input to create examples for each concept. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4731f83f",
+   "metadata": {},
+   "source": [
+    "## Variables - Code Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8855d3b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Store the message in a variable\n",
+    "greeting = \"Hello, world!\"\n",
+    "\n",
+    "# Print the value of the variable\n",
+    "print(greeting)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16921a44",
+   "metadata": {},
+   "source": [
+    "## Functions - Code Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d12e4022",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define a function that prints a greeting\n",
+    "def say_hello():\n",
+    "    print(\"Hello, world!\")\n",
+    "\n",
+    "# Call the function\n",
+    "say_hello()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "757ab6c1",
+   "metadata": {},
+   "source": [
+    "## Loops - Code Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f234957e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n",
+      "Hello, world!\n",
+      "Hello, world!\n",
+      "Hello, world!\n",
+      "Hello, world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Repeat the greeting 5 times using a loop\n",
+    "for i in range(5):\n",
+    "    print(\"Hello, world!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acb17160",
+   "metadata": {},
+   "source": [
+    "## Lists - Code Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "27a820a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n",
+      "Hi there!\n",
+      "Welcome!\n",
+      "Good day!\n",
+      "Hey!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a list of greetings\n",
+    "greetings = [\"Hello, world!\", \"Hi there!\", \"Welcome!\", \"Good day!\", \"Hey!\"]\n",
+    "\n",
+    "# Loop through the list and print each greeting\n",
+    "for message in greetings:\n",
+    "    print(message)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a73541c1",
+   "metadata": {},
+   "source": [
+    "## Dictionaries - Code Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5266c1f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "English: Hello, world!\n",
+      "Spanish: ¡Hola, mundo!\n",
+      "French: Bonjour, le monde!\n",
+      "German: Hallo, Welt!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a dictionary of greetings in different languages\n",
+    "greetings = {\n",
+    "    \"English\": \"Hello, world!\",\n",
+    "    \"Spanish\": \"¡Hola, mundo!\",\n",
+    "    \"French\": \"Bonjour, le monde!\",\n",
+    "    \"German\": \"Hallo, Welt!\"\n",
+    "}\n",
+    "\n",
+    "# Loop through the dictionary and print each language with its greeting\n",
+    "for language, message in greetings.items():\n",
+    "    print(language + \": \" + message)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12e49d1f",
+   "metadata": {},
+   "source": [
+    "## Arrays - Code Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0391e171",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n",
+      "Hi there!\n",
+      "Welcome!\n",
+      "Good day!\n",
+      "Hey!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an array (list) of greetings\n",
+    "greetings = [\"Hello, world!\", \"Hi there!\", \"Welcome!\", \"Good day!\", \"Hey!\"]\n",
+    "\n",
+    "# Use a loop to print each greeting from the array\n",
+    "for i in range(len(greetings)):\n",
+    "    print(greetings[i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38cc226b",
+   "metadata": {},
+   "source": [
+    "## Importing Libraries - Code Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "22b2f4f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import the 'random' library to generate random choices\n",
+    "import random\n",
+    "\n",
+    "# Create a list of greetings\n",
+    "greetings = [\"Hello, world!\", \"Hi there!\", \"Welcome!\", \"Good day!\", \"Hey!\"]\n",
+    "\n",
+    "# Use the random library to pick one greeting\n",
+    "message = random.choice(greetings)\n",
+    "\n",
+    "# Print the randomly selected greeting\n",
+    "print(message)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8116391",
+   "metadata": {},
+   "source": [
+    "## If, Elif, Else Statements - Code Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e6bc5730",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world! It's great to see you happy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ask the user for their mood\n",
+    "mood = input(\"How are you feeling today? (happy, sad, excited): \")\n",
+    "\n",
+    "# Use if, elif, and else to respond based on the mood\n",
+    "if mood == \"happy\":\n",
+    "    print(\"Hello, world! It's great to see you happy!\")\n",
+    "elif mood == \"sad\":\n",
+    "    print(\"Hello, world! Hope things get better soon.\")\n",
+    "elif mood == \"excited\":\n",
+    "    print(\"Hello, world! Let's celebrate your excitement!\")\n",
+    "else:\n",
+    "    print(\"Hello, world! Nice to meet you!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3960627f",
+   "metadata": {},
+   "source": [
+    "## Operators - Code Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "de2821f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n",
+      "Hello! Hello! Hello! \n",
+      "Sum of numbers: 8\n",
+      "Product of numbers: 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Demonstrating operators with \"Hello, world!\"\n",
+    "\n",
+    "# Addition with strings\n",
+    "greeting = \"Hello\" + \", world!\"\n",
+    "print(greeting)  # Combines two strings into one\n",
+    "\n",
+    "# Multiplication with strings\n",
+    "echo = \"Hello! \" * 3\n",
+    "print(echo)  # Repeats the string 3 times\n",
+    "\n",
+    "# Addition with numbers\n",
+    "a = 5\n",
+    "b = 3\n",
+    "sum_result = a + b\n",
+    "print(\"Sum of numbers:\", sum_result)\n",
+    "\n",
+    "# Multiplication with numbers\n",
+    "product_result = a * b\n",
+    "print(\"Product of numbers:\", product_result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07279c4f",
+   "metadata": {},
+   "source": [
+    "## Classes, Objects, and Methods - Code Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "024375b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define a class called Greeter\n",
+    "class Greeter:\n",
+    "    # Method inside the class to say hello\n",
+    "    def say_hello(self):\n",
+    "        print(\"Hello, world!\")\n",
+    "\n",
+    "# Create an object (instance) of the Greeter class\n",
+    "my_greeter = Greeter()\n",
+    "\n",
+    "# Call the method using the object\n",
+    "my_greeter.say_hello()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5355d7af",
+   "metadata": {},
+   "source": [
+    "## PEP 8 Guidelines for Python Syntax\n",
+    "Absolutely! Let’s use the examples we discussed (variables, functions, loops, lists, dictionaries, arrays, importing libraries, conditionals, operators, and classes) to explain **basic Python syntax** step-by-step for a complete beginner. I’ll also reference well-known Python style guides like **PEP 8**, which is the official Python style guide.\n",
+    "\n",
+    "***\n",
+    "\n",
+    "## ✅ 1. **Basic Structure of Python Code**\n",
+    "\n",
+    "*   Python uses **indentation** (spaces) instead of braces `{}` to define blocks of code.\n",
+    "*   Standard indentation: **4 spaces** (PEP 8 recommendation).\n",
+    "*   Example:\n",
+    "    ```python\n",
+    "    if True:\n",
+    "        print(\"Indented block\")\n",
+    "    ```\n",
+    "\n",
+    "***\n",
+    "\n",
+    "## ✅ 2. **Variables**\n",
+    "\n",
+    "*   Variables store data. No need to declare a type explicitly.\n",
+    "*   Example:\n",
+    "    ```python\n",
+    "    greeting = \"Hello, world!\"  # String\n",
+    "    number = 10                 # Integer\n",
+    "    ```\n",
+    "*   **PEP 8 Tip:** Use lowercase names with underscores for variables (e.g., `my_variable`).\n",
+    "\n",
+    "***\n",
+    "\n",
+    "## ✅ 3. **Functions**\n",
+    "\n",
+    "*   Defined using `def` keyword.\n",
+    "*   Example:\n",
+    "    ```python\n",
+    "    def say_hello():\n",
+    "        print(\"Hello, world!\")\n",
+    "    ```\n",
+    "*   **PEP 8 Tip:** Function names should be lowercase with underscores (e.g., `say_hello`).\n",
+    "\n",
+    "***\n",
+    "\n",
+    "## ✅ 4. **Loops**\n",
+    "\n",
+    "*   `for` loops iterate over sequences.\n",
+    "*   Example:\n",
+    "    ```python\n",
+    "    for i in range(5):\n",
+    "        print(\"Hello, world!\")\n",
+    "    ```\n",
+    "*   **PEP 8 Tip:** Add a blank line before and after function definitions and top-level code blocks.\n",
+    "\n",
+    "***\n",
+    "\n",
+    "## ✅ 5. **Lists (Arrays in Python)**\n",
+    "\n",
+    "*   Lists store multiple items.\n",
+    "*   Example:\n",
+    "    ```python\n",
+    "    greetings = [\"Hello\", \"Hi\", \"Welcome\"]\n",
+    "    for message in greetings:\n",
+    "        print(message)\n",
+    "    ```\n",
+    "\n",
+    "***\n",
+    "\n",
+    "## ✅ 6. **Dictionaries**\n",
+    "\n",
+    "*   Store key-value pairs.\n",
+    "*   Example:\n",
+    "    ```python\n",
+    "    greetings = {\"English\": \"Hello\", \"Spanish\": \"Hola\"}\n",
+    "    print(greetings[\"English\"])\n",
+    "    ```\n",
+    "\n",
+    "***\n",
+    "\n",
+    "## ✅ 7. **Importing Libraries**\n",
+    "\n",
+    "*   Use `import` to bring in extra functionality.\n",
+    "*   Example:\n",
+    "    ```python\n",
+    "    import random\n",
+    "    print(random.choice([\"Hello\", \"Hi\"]))\n",
+    "    ```\n",
+    "*   **PEP 8 Tip:** Imports should be at the top of the file.\n",
+    "\n",
+    "***\n",
+    "\n",
+    "## ✅ 8. **Conditionals (`if`, `elif`, `else`)**\n",
+    "\n",
+    "*   Example:\n",
+    "    ```python\n",
+    "    mood = \"happy\"\n",
+    "    if mood == \"happy\":\n",
+    "        print(\"Great!\")\n",
+    "    elif mood == \"sad\":\n",
+    "        print(\"Cheer up!\")\n",
+    "    else:\n",
+    "        print(\"Hello!\")\n",
+    "    ```\n",
+    "\n",
+    "***\n",
+    "\n",
+    "## ✅ 9. **Operators**\n",
+    "\n",
+    "*   Addition and multiplication work differently for strings and numbers:\n",
+    "    ```python\n",
+    "    print(\"Hello\" + \" World\")   # String concatenation\n",
+    "    print(\"Hi! \" * 3)           # String repetition\n",
+    "    print(5 + 3)                # Numeric addition\n",
+    "    print(5 * 3)                # Numeric multiplication\n",
+    "    ```\n",
+    "\n",
+    "***\n",
+    "\n",
+    "## ✅ 10. **Classes, Objects, and Methods**\n",
+    "\n",
+    "*   Example:\n",
+    "    ```python\n",
+    "    class Greeter:\n",
+    "        def say_hello(self):\n",
+    "            print(\"Hello, world!\")\n",
+    "\n",
+    "    g = Greeter()\n",
+    "    g.say_hello()\n",
+    "    ```\n",
+    "*   **PEP 8 Tip:** Class names use **CapWords** convention (e.g., `Greeter`).\n",
+    "\n",
+    "***\n",
+    "\n",
+    "### ✅ Key PEP 8 Guidelines to Remember:\n",
+    "\n",
+    "*   **Indentation:** 4 spaces per level.\n",
+    "*   **Line length:** Max 79 characters.\n",
+    "*   **Naming conventions:**\n",
+    "    *   Variables & functions → lowercase\\_with\\_underscores\n",
+    "    *   Classes → CapWords\n",
+    "*   **Imports:** At the top of the file.\n",
+    "*   **Blank lines:** Separate functions and classes with two blank lines.\n",
+    "\n",
+    "***\n",
+    "\n",
+    "Would you like me to **combine all these examples into one single annotated Python script** that demonstrates every concept in a clean, beginner-friendly way following PEP 8? Or should I **create a visual cheat sheet** summarizing Python syntax and style rules?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e614baf",
+   "metadata": {},
+   "source": [
+    "## Simplicity, Security, and Inclusion - Code Examples\n",
+    "Great question! Let’s create **three different Python implementations of “Hello, World!”**, each emphasizing a different principle: **simplicity**, **security**, and **inclusion**. I’ll explain each step-by-step and highlight the key aspects.\n",
+    "\n",
+    "***\n",
+    "\n",
+    "## ✅ 1. **Simplicity**\n",
+    "\n",
+    "The simplest possible implementation focuses on clarity and minimalism.\n",
+    "\n",
+    "```python\n",
+    "# Simple Hello World\n",
+    "print(\"Hello, world!\")\n",
+    "```\n",
+    "\n",
+    "### 🔍 Explanation:\n",
+    "\n",
+    "*   **`print()`** is the built-in function to display output.\n",
+    "*   No extra code, no complexity—just one line.\n",
+    "*   **Why it matters:** Beginners learn that Python is readable and easy to start with.\n",
+    "*   **PEP 8 Tip:** Keep code minimal and readable; avoid unnecessary complexity.\n",
+    "\n",
+    "***\n",
+    "\n",
+    "## ✅ 2. **Security**\n",
+    "\n",
+    "Even for a simple program, we can demonstrate safe practices like **validating input** and avoiding risky operations.\n",
+    "\n",
+    "```python\n",
+    "# Secure Hello World with input validation\n",
+    "user_input = input(\"Type 'hello' to continue: \")\n",
+    "\n",
+    "if user_input.strip().lower() == \"hello\":\n",
+    "    print(\"Hello, world!\")\n",
+    "else:\n",
+    "    print(\"Invalid input. Goodbye!\")\n",
+    "```\n",
+    "\n",
+    "### 🔍 Explanation:\n",
+    "\n",
+    "*   **`input()`** asks the user for input.\n",
+    "*   **`.strip().lower()`** normalizes input (removes spaces and converts to lowercase).\n",
+    "*   **Condition check:** Only prints the message if the user types “hello”.\n",
+    "*   **Why it matters:** Shows beginners that validating input prevents unexpected behavior.\n",
+    "*   **Security principle:** Never trust user input blindly—always sanitize or validate.\n",
+    "\n",
+    "***\n",
+    "\n",
+    "## ✅ 3. **Inclusion**\n",
+    "\n",
+    "We can make the program inclusive by supporting multiple languages or accessibility features.\n",
+    "\n",
+    "```python\n",
+    "# Inclusive Hello World with multiple languages\n",
+    "greetings = {\n",
+    "    \"en\": \"Hello, world!\",\n",
+    "    \"es\": \"¡Hola, mundo!\",\n",
+    "    \"fr\": \"Bonjour, le monde!\",\n",
+    "    \"de\": \"Hallo, Welt!\"\n",
+    "}\n",
+    "\n",
+    "language = input(\"Choose a language (en/es/fr/de): \").strip().lower()\n",
+    "\n",
+    "if language in greetings:\n",
+    "    print(greetings[language])\n",
+    "else:\n",
+    "    print(\"Language not supported. Defaulting to English.\")\n",
+    "    print(greetings[\"en\"])\n",
+    "```\n",
+    "\n",
+    "### 🔍 Explanation:\n",
+    "\n",
+    "*   **Dictionary of greetings:** Maps language codes to messages.\n",
+    "*   **User choice:** Lets the user select their preferred language.\n",
+    "*   **Fallback:** Defaults to English if input is invalid.\n",
+    "*   **Why it matters:** Demonstrates inclusivity and adaptability for global users.\n",
+    "*   **PEP 8 Tip:** Use descriptive variable names and keep code readable.\n",
+    "\n",
+    "***\n",
+    "\n",
+    "### ✅ Key Takeaways:\n",
+    "\n",
+    "*   **Simplicity:** Start with the most basic form to reduce cognitive load.\n",
+    "*   **Security:** Validate input and avoid assumptions.\n",
+    "*   **Inclusion:** Consider diverse users and accessibility from the start.\n",
+    "\n",
+    "***\n",
+    "\n",
+    "👉 Would you like me to **combine these three principles into one advanced “Hello World” program** that is simple, secure, and inclusive? Or should I **create a visual cheat sheet comparing these three approaches with PEP 8 best practices**?\n"
+   ]
   }
  ],
  "metadata": {
