--- a/coding_exercises.ipynb
+++ b/coding_exercises.ipynb
@@ -697,6 +697,146 @@
     "# Learning Outcome Summary and Experience with Copilot\n",
     "This section of the lab book, along with Copilot, covered the fundamentals of python (and programming in general). As I already have some prior experience with python, I already knew these concepts, so this just reinforced my current understanding of them."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9035a17e",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e8f8ddd",
+   "metadata": {},
+   "source": [
+    "# Algorithms, Pseudocodes, Codes: Working with Algorithms\n",
+    "Some \"algorithms\" we may experience daily are:\n",
+    "- crossing the road\n",
+    "- shutting down a laptop\n",
+    "- making toast\n",
+    "- drinking a cup of coffee"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ee941e9",
+   "metadata": {},
+   "source": [
+    "# Finding the Most Common Word in a Poem (Lab Book Example Code)\n",
+    "I think the most common word in the poem would either be `a` or `the`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5972626b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most frequent word: a appears 2 times\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "poem = \"Shall I compare thee to a summer's day? Thou art more lovely and more temperate: Rough winds do shake the darling buds of May, And summer's lease hath all too short a date:\"\n",
+    "\n",
+    "words = [w.lower() for w in poem.split()]\n",
+    "counts = Counter(words)\n",
+    "most_common = counts.most_common(1)[0]\n",
+    "\n",
+    "print(\"Most frequent word:\", most_common[0], \"appears\", most_common[1], \"times\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "890af1c8",
+   "metadata": {},
+   "source": [
+    "# Pseudocode for \"Drinking a Cup of Coffee\"\n",
+    "## My Pseudocode"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "d7eb10a4",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "WHILE cup is NOT EMPTY\n",
+    "    LIFT cup\n",
+    "    DRINK from cup\n",
+    "    PUT DOWN cup\n",
+    "    CHECK cup is NOT EMPTY"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98ba7aee",
+   "metadata": {},
+   "source": [
+    "This while loop (going through the motion of actually taking a drink) would only get executed if `NOT EMPTY == True`, thus it would keep looping until the `NOT EMPTY` state becomes `False`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4c58a13",
+   "metadata": {},
+   "source": [
+    "## CoPilot's Python Version from my Pseudocode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5db88150",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lift cup\n",
+      "Drink from cup\n",
+      "Put down cup\n",
+      "Lift cup\n",
+      "Drink from cup\n",
+      "Put down cup\n",
+      "Lift cup\n",
+      "Drink from cup\n",
+      "Put down cup\n"
+     ]
+    }
+   ],
+   "source": [
+    "cup_amount = 3  # number of sips left\n",
+    "\n",
+    "while True:\n",
+    "    print(\"Lift cup\")\n",
+    "    print(\"Drink from cup\")\n",
+    "    cup_amount -= 1\n",
+    "    print(\"Put down cup\")\n",
+    "\n",
+    "    if cup_amount <= 0:  # Check at the end\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca987c33",
+   "metadata": {},
+   "source": [
+    "This code ran as intended."
+   ]
   }
  ],
  "metadata": {
