--- a/coding_exercises.ipynb
+++ b/coding_exercises.ipynb
@@ -764,13 +764,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d7eb10a4",
    "metadata": {
     "vscode": {
-     "languageId": "raw"
+     "languageId": "shellscript"
     }
    },
+   "outputs": [],
    "source": [
     "WHILE cup is NOT EMPTY\n",
     "    LIFT cup\n",
