--- a/coding_exercises.ipynb
+++ b/coding_exercises.ipynb
@@ -2363,6 +2363,392 @@
     "# Labels (target values)\n",
     "print(\"Labels shape:\", diabetes.target.shape)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c761866",
+   "metadata": {},
+   "source": [
+    "# Basic Data Exploration with Pandas\n",
+    "\n",
+    "## My Prompt:\n",
+    "Using the PDF attached to this prompt, for elements 1, 2, 3, and 5 ONLY, provide examples to demonstrate each of these concepts in the list. These examples are being read by an absolute beginner in coding, therefore you should provide a step-by-step explanation for the reader.\n",
+    "\n",
+    "## *Copilot Response:*\n",
+    "Great! The PDF lists these concepts for **Pandas**:\n",
+    "\n",
+    "1.  **Installation and Setup**\n",
+    "2.  **Understanding Data Structures**\n",
+    "3.  **Creating DataFrames**\n",
+    "4.  **Inspecting Data**\n",
+    "\n",
+    "I’ll now provide **examples for these four concepts** with **step-by-step explanations** for an absolute beginner.\n",
+    "\n",
+    "***\n",
+    "\n",
+    "## ✅ 1. **Installation and Setup**\n",
+    "\n",
+    "**Goal:** Install pandas and import it.\n",
+    "\n",
+    "### Example:\n",
+    "\n",
+    "```python\n",
+    "# Install pandas (run this in terminal or notebook)\n",
+    "# pip install pandas\n",
+    "\n",
+    "# Import pandas in your Python script\n",
+    "import pandas as pd\n",
+    "\n",
+    "print(\"Pandas imported successfully!\")\n",
+    "```\n",
+    "\n",
+    "### Step-by-Step:\n",
+    "\n",
+    "*   `pip install pandas` installs the library.\n",
+    "*   `import pandas as pd` brings pandas into your code.\n",
+    "*   `pd` is a common alias used in the Python community (recommended by PEP 8 and pandas docs).\n",
+    "\n",
+    "***\n",
+    "\n",
+    "## ✅ 2. **Understanding Data Structures**\n",
+    "\n",
+    "Pandas has two main structures:\n",
+    "\n",
+    "*   **Series**: A one-dimensional labeled array.\n",
+    "*   **DataFrame**: A two-dimensional table (rows and columns).\n",
+    "\n",
+    "### Example:\n",
+    "\n",
+    "```python\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Create a Series\n",
+    "numbers = pd.Series([10, 20, 30])\n",
+    "print(\"Series:\\n\", numbers)\n",
+    "\n",
+    "# Create a DataFrame\n",
+    "data = {\n",
+    "    \"Name\": [\"Alice\", \"Bob\", \"Charlie\"],\n",
+    "    \"Age\": [25, 30, 35]\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "print(\"\\nDataFrame:\\n\", df)\n",
+    "```\n",
+    "\n",
+    "### Step-by-Step:\n",
+    "\n",
+    "*   `pd.Series()` creates a single column of data.\n",
+    "*   `pd.DataFrame()` creates a table with multiple columns.\n",
+    "*   Both structures have **labels** (indexes) for easy access.\n",
+    "\n",
+    "***\n",
+    "\n",
+    "## ✅ 3. **Creating DataFrames**\n",
+    "\n",
+    "You can create DataFrames from:\n",
+    "\n",
+    "*   **Dictionaries**\n",
+    "*   **Lists**\n",
+    "*   **CSV files**\n",
+    "\n",
+    "### Example (from dictionary):\n",
+    "\n",
+    "```python\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Create DataFrame from dictionary\n",
+    "data = {\n",
+    "    \"Country\": [\"USA\", \"UK\", \"Canada\"],\n",
+    "    \"Population\": [331, 67, 38]\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "print(df)\n",
+    "```\n",
+    "\n",
+    "### Step-by-Step:\n",
+    "\n",
+    "*   Keys in the dictionary become **column names**.\n",
+    "*   Values become **column data**.\n",
+    "\n",
+    "***\n",
+    "\n",
+    "### Example (from CSV file):\n",
+    "\n",
+    "```python\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Read data from a CSV file\n",
+    "df = pd.read_csv(\"data.csv\")  # Ensure data.csv exists\n",
+    "print(df.head())  # Show first 5 rows\n",
+    "```\n",
+    "\n",
+    "### Step-by-Step:\n",
+    "\n",
+    "*   `pd.read_csv()` loads data from a CSV file into a DataFrame.\n",
+    "*   `.head()` shows the first few rows.\n",
+    "\n",
+    "***\n",
+    "\n",
+    "## ✅ 5. **Inspecting Data**\n",
+    "\n",
+    "Once you have a DataFrame, you need to **look at the data**.\n",
+    "\n",
+    "### Example:\n",
+    "\n",
+    "```python\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Sample DataFrame\n",
+    "data = {\n",
+    "    \"Name\": [\"Alice\", \"Bob\", \"Charlie\"],\n",
+    "    \"Age\": [25, 30, 35],\n",
+    "    \"City\": [\"New York\", \"London\", \"Toronto\"]\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# View first few rows\n",
+    "print(\"First rows:\\n\", df.head())\n",
+    "\n",
+    "# View last few rows\n",
+    "print(\"\\nLast rows:\\n\", df.tail())\n",
+    "\n",
+    "# Get summary info\n",
+    "print(\"\\nSummary:\\n\")\n",
+    "print(df.info())\n",
+    "\n",
+    "# Get basic statistics\n",
+    "print(\"\\nStatistics:\\n\")\n",
+    "print(df.describe())\n",
+    "```\n",
+    "\n",
+    "### Step-by-Step:\n",
+    "\n",
+    "*   `.head()` → first 5 rows.\n",
+    "*   `.tail()` → last 5 rows.\n",
+    "*   `.info()` → column types and non-null counts.\n",
+    "*   `.describe()` → summary statistics for numeric columns.\n",
+    "\n",
+    "***\n",
+    "\n",
+    "✅ These examples cover **installation**, **data structures**, **creating DataFrames**, and **inspecting data**.\n",
+    "\n",
+    "***\n",
+    "\n",
+    "👉 Would you like me to **combine all these examples into one beginner-friendly script with comments**, or **create a visual cheat sheet summarizing these four concepts with code snippets and diagrams**?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3912c7f",
+   "metadata": {},
+   "source": [
+    "# Below are the code examples generated by Copilot from the PDF list of topics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2712fa98",
+   "metadata": {},
+   "source": [
+    "## 1. Installation and Setup - Code Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "4bddf5ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pandas imported successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Install pandas (run this in terminal or notebook)\n",
+    "# pip install pandas\n",
+    "\n",
+    "# Import pandas in your Python script\n",
+    "import pandas as pd\n",
+    "\n",
+    "print(\"Pandas imported successfully!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6012275f",
+   "metadata": {},
+   "source": [
+    "## 2. Understanding Data Structures - Code Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a93d1d67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Series:\n",
+      " 0    10\n",
+      "1    20\n",
+      "2    30\n",
+      "dtype: int64\n",
+      "\n",
+      "DataFrame:\n",
+      "       Name  Age\n",
+      "0    Alice   25\n",
+      "1      Bob   30\n",
+      "2  Charlie   35\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Create a Series\n",
+    "numbers = pd.Series([10, 20, 30])\n",
+    "print(\"Series:\\n\", numbers)\n",
+    "\n",
+    "# Create a DataFrame\n",
+    "data = {\n",
+    "    \"Name\": [\"Alice\", \"Bob\", \"Charlie\"],\n",
+    "    \"Age\": [25, 30, 35]\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "print(\"\\nDataFrame:\\n\", df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "172119a7",
+   "metadata": {},
+   "source": [
+    "## 3. Creating DataFrames - Code Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e23a8d49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Country  Population\n",
+      "0     USA         331\n",
+      "1      UK          67\n",
+      "2  Canada          38\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Create DataFrame from dictionary\n",
+    "data = {\n",
+    "    \"Country\": [\"USA\", \"UK\", \"Canada\"],\n",
+    "    \"Population\": [331, 67, 38]\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d704ad16",
+   "metadata": {},
+   "source": [
+    "## 5. Inspecting Data - Code Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8e6674f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First rows:\n",
+      "       Name  Age      City\n",
+      "0    Alice   25  New York\n",
+      "1      Bob   30    London\n",
+      "2  Charlie   35   Toronto\n",
+      "\n",
+      "Last rows:\n",
+      "       Name  Age      City\n",
+      "0    Alice   25  New York\n",
+      "1      Bob   30    London\n",
+      "2  Charlie   35   Toronto\n",
+      "\n",
+      "Summary:\n",
+      "\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3 entries, 0 to 2\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   Name    3 non-null      object\n",
+      " 1   Age     3 non-null      int64 \n",
+      " 2   City    3 non-null      object\n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 204.0+ bytes\n",
+      "None\n",
+      "\n",
+      "Statistics:\n",
+      "\n",
+      "        Age\n",
+      "count   3.0\n",
+      "mean   30.0\n",
+      "std     5.0\n",
+      "min    25.0\n",
+      "25%    27.5\n",
+      "50%    30.0\n",
+      "75%    32.5\n",
+      "max    35.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Sample DataFrame\n",
+    "data = {\n",
+    "    \"Name\": [\"Alice\", \"Bob\", \"Charlie\"],\n",
+    "    \"Age\": [25, 30, 35],\n",
+    "    \"City\": [\"New York\", \"London\", \"Toronto\"]\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# View first few rows\n",
+    "print(\"First rows:\\n\", df.head())\n",
+    "\n",
+    "# View last few rows\n",
+    "print(\"\\nLast rows:\\n\", df.tail())\n",
+    "\n",
+    "# Get summary info\n",
+    "print(\"\\nSummary:\\n\")\n",
+    "print(df.info())\n",
+    "\n",
+    "# Get basic statistics\n",
+    "print(\"\\nStatistics:\\n\")\n",
+    "print(df.describe())"
+   ]
   }
  ],
  "metadata": {
